# LangChainNotes

./: .gitignore  notes.md
langchain_web_scrapping/: pyproject.toml
langchain_web_scrapping/langchain_web_scrapping/: main.py  scrape.py
langchain_zero/: main.py  pyproject.toml
langchain_zero/langchain_zero/: api.py  chains.py
